# commons-operator

./: CHANGELOG.md  Cargo.nix  Cargo.toml  Makefile  README.md  _TEST.yaml  crate-hashes.json  deny.toml  dummy-deploy.yaml  node.yaml  plan.txt  test.yaml  test_daemonset.yaml
.github/ISSUE_TEMPLATE/: config.yml  new_version.md
.github/workflows/: build.yaml  build.yml
.readme/: README.md.j2
.readme/partials/: main.md.j2
deploy/: DO_NOT_EDIT.md
deploy/helm/commons-operator/: Chart.yaml  README.md  values.yaml
deploy/helm/commons-operator/crds/: crds.yaml
deploy/helm/commons-operator/templates/: deployment.yaml  roles.yaml  serviceaccount.yaml
deploy/kustomize/base/: configmap.yaml  deployment.yaml  kustomization.yaml  roles.yaml  serviceaccount.yaml
deploy/kustomize/overlays/helm/: kustomization.yaml  values.yaml
deploy/manifests/: configmap.yaml  crds.yaml  deployment.yaml  roles.yaml  serviceaccount.yaml
deploy/olm/: bundle.sh
deploy/olm/23.1.0/: bundle.sh  olm_generate.sh
deploy/olm/23.1.0/manifests/: csv.yaml
deploy/olm/23.4.0/manifests/: stackable-commons-operator.clusterserviceversion.yaml
docker/: Dockerfile  Dockerfile.alternative
docs/: antora.yml
docs/modules/ROOT/: nav.adoc
docs/modules/ROOT/examples/: authenticationclass-ldap-full.yaml  authenticationclass-ldap-openldap-simple.yaml  authenticationclass-ldap-simple.yaml  tls-mutual-verification.yaml  tls-no-verification.yaml  tls-server-verification-custom-ca.yaml  tls-server-verification-webpki.yaml  tls-simple.yaml
docs/modules/ROOT/pages/: authenticationclass.adoc  configuration.adoc  index.adoc  installation.adoc  pod-enrichment.adoc  reloader.adoc  restarter.adoc  tls.adoc  usage.adoc
docs/modules/commons-operator/: nav.adoc
docs/modules/commons-operator/pages/: authenticationclass.adoc  index.adoc  installation.adoc  pod-enrichment.adoc  restarter.adoc  usage.adoc
docs/modules/commons-operator/pages/reference/: crds.adoc  environment-variables.adoc  index.adoc
docs/modules/commons-operator/partials/: nav.adoc
extra/: crds.yaml
nix/: meta.json
rust/crd/: Cargo.toml
rust/crd/src/: authentication.rs  lib.rs  tls.rs
rust/operator-binary/: Cargo.toml  build.rs  cert.yaml  mwc.yaml  proxy.nginx.conf  restarted-sts.yaml
rust/operator-binary/src/: main.rs  pod_enrichment_controller.rs  restart_controller.rs  webhooks.rs
rust/operator-binary/src/restart_controller/: mod.rs  pod.rs  statefulset.rs  webhook.rs
rust/operator-binary/src/restart_controller/statefulset/: controller.rs  mod.rs  webhook.rs  webhook_cert_manager.rs
rust/operator-binary/src/secret_operator/manifests/: csidriver.yaml  roles.yaml  storageclass.yaml
rust/operator-binary/src/stackable_cluster_controller/: crd.rs  mod.rs
rust/operator-binary/src/stackable_cluster_controller/secret_operator/manifests/: daemonset.yaml  serviceaccount.yaml
rust/operator-binary/src/utils/: delayed_init.rs  mod.rs  single_object_controller.rs  tls_cert_manager.rs  tls_server.rs
rust/operator-binary/src/webhook/: mod.rs  restarter_mutate_sts.rs
rust/operator-binary/src/webhooks/: conversion.rs  mod.rs  restarter_mutate_sts.rs  scaler_admission.rs
scripts/: generate-manifests.sh
tests/: release.yaml  test-definition.yaml
tests/templates/kuttl/restarter/: 10-assert.yaml  10-create-test-resources.yaml  10-sleep.yaml  20-assert.yaml  20-hot-reload.yaml  20-update-cm.yaml  21-assert.yaml  21-trigger-restart.yaml  test-script.sh
tests/templates/kuttl/restarter-no-unneeded-restart/: 01-assert.yaml  01-early-before-config.yaml  02-assert.yaml  02-late-after-config.yaml
