[workspace]
members = ["rust/operator-binary"]
resolver = "2"

[workspace.package]
version = "24.3.0"
authors = ["Stackable GmbH <info@stackable.tech>"]
license = "OSL-3.0"
edition = "2021"
repository = "https://github.com/stackabletech/commons-operator"

[workspace.dependencies]
anyhow = "1.0"
built = { version = "0.6", features = ["chrono", "git2"] }
clap = "4.3"
futures = { version = "0.3", features = ["compat"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snafu = "0.7"
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.64.0" }
strum = { version = "0.25", features = ["derive"] }
tokio = { version = "1.29", features = ["full"] }
tracing = "0.1"

# [patch."https://github.com/stackabletech/operator-rs.git"]
# stackable-operator = { git = "https://github.com/stackabletech//operator-rs.git", branch = "main" }
