[package]
name = "stackable-commons-operator"
authors = ["Stackable GmbH <info@stackable.de>"]
description = "Stackable Operator for commons"
license = "OSL-3.0"
version = "0.5.0-nightly"
edition = "2021"
repository = "https://github.com/stackabletech/commons-operator"
publish = false

[dependencies]
anyhow = "1.0"
clap = "4.0"
futures = { version = "0.3", features = ["compat"] }
serde = "1.0"
serde_json = "1.0"
snafu = "0.7"
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.27.1" }
strum = { version = "0.24", features = ["derive"] }
tokio = { version = "1.21", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"

[build-dependencies]
built = { version =  "0.5", features = ["chrono", "git2"] }
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.27.1" }
