[package]
name = "stackable-commons-operator"
description = "Stackable Operator for commons"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[dependencies]
stackable-operator.workspace = true

anyhow.workspace = true
clap.workspace = true
http.workspace = true
futures.workspace = true
json-patch.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
strum.workspace = true
tokio.workspace = true
tracing.workspace = true

[build-dependencies]
built.workspace = true
